layout changes part one

--- a/src/Components/Filters/filter.scss
+++ b/src/Components/Filters/filter.scss
@@ -3,9 +3,9 @@
 .filtered-results {
   display: grid;
   margin: 0 auto;
+  padding: 20px;
   @media (min-width: $tabletDevice)  {
     max-width: $tabletDevice;
-    padding: 20px;
   }
 
   @media (min-width: $largeTabletDevice) {
@@ -13,7 +13,6 @@
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 2fr;
     grid-gap: 20px;
-    padding: 0 100px 50px 20px;
   }
 
   @media (min-width: $desktopDevice) {
@@ -33,13 +32,16 @@
 .filtered-results-header {
   position: absolute;
   right: 0;
-  text-align: right;
+  top: 10px;
+  text-align: center;
   border: 1px $pureBlack solid;
   background-color: $pureWhite;
   color: $pureBlack;
   font-size: 18px;
   padding: 5px;
   border-radius: 5px;
+  margin: 0;
+  min-width: 100px;
 
   @media (min-width: $largeTabletDevice) {
     text-align: left;
@@ -49,7 +51,7 @@
 
 .filtered-results-controls {
   display: grid;
-  padding: 45px 20px 20px 20px;
+  padding-top: 30px;
   font-size: 20px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
