--- a/src/Components/Landing/BestSellers/bestsellers.scss
+++ b/src/Components/Landing/BestSellers/bestsellers.scss
@@ -49,11 +49,21 @@
   display: flex;
   justify-content: space-between;
   min-height: 60px;
+  @media (min-width: $desktopDevice) {
+    width: auto;
+  }
+  @media (min-width: $largeDesktopDevice) {
+    width: 100%;
+  }
 }
 
 .bestsellers__header-link {
   text-decoration: none;
   color: $darkBlue;
+  display: flex;
+  @media (min-width: $desktopDevice) {
+    padding-left: 750px;
+  }
 }
 
 // ******
