--- a/src/Components/ShoppingCart/shoppingCart.scss
+++ b/src/Components/ShoppingCart/shoppingCart.scss
@@ -1,245 +1,326 @@
 @import "src/App";
 
 .shopping-card {
-    display: grid;
-    grid-template-rows: 1fr;
-    border-bottom: 1px $pureBlack solid;
-    margin: 0 auto;
-    @media (min-width: $tabletDevice)  {
-        max-width: $tabletDevice;
-        grid-template-columns: 1fr;
-        grid-template-rows: 0.1fr 0.3fr 0.2fr 0.2fr 0.2fr 0.1fr;
-        padding: 30px 20px 30px 20px;
-        text-align: center;
-        grid-gap: 10px;
-    }
+  display: grid;
+  border-bottom: 1px $pureBlack solid;
+  grid-gap: 20px;
+  margin: 0 auto;
+  @media (min-width: $mobileDevice) {
+    grid-template-rows: 0.1fr 0.1fr 0.1fr 0.2fr 0.2fr;
+    grid-template-columns: 1fr;
+  }
 
-    @media (min-width: $largeDesktopDevice) {
-        grid-template-columns: 0.1fr 0.3fr 0.2fr 0.2fr 0.2fr 0.1fr;
-        grid-template-rows: none;
-        max-width: $largeDesktopDevice;
-        margin:  30px 100px 0 100px;
-        padding-bottom: 30px;
-        grid-gap: 0;
-    }
+  @media (min-width: $tabletDevice) {
+    max-width: $tabletDevice;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.1fr 0.3fr 0.2fr 0.2fr 0.2fr 0.1fr;
+    text-align: center;
+    grid-gap: 10px;
+  }
+  @media (min-width: $desktopDevice) {
+    max-width: $largeDesktopDevice;
+    margin: 30px 100px 0 100px;
+    grid-template-columns: 0.1fr 0.3fr 0.2fr 0.2fr 0.2fr 0.1fr;
+    grid-template-rows: 1fr;
+    padding-bottom: 30px;
+    grid-gap: 20px;
+  }
+
+  @media (min-width: $largeDesktopDevice) {
+    grid-template-columns: 0.1fr 0.3fr 0.2fr 0.2fr 0.2fr 0.1fr;
+    grid-template-rows: none;
+    max-width: $largeDesktopDevice;
+    margin: 30px 100px 0 100px;
+    padding-bottom: 30px;
+    grid-gap: 0;
+  }
 }
 
 .shopping-card__img {
+  @media (min-width: $mobileDevice) {
+    margin: 0 auto;
 
-    @media (min-width: $tabletDevice)  {
-        margin: 0;
-        align-items: center;
-        justify-content: center;
-    }
-    max-width: 100%;
-    max-height: 100%;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    font-weight: 700;
-    font-size: 25px;
-    line-height: 34px;
-    margin: 0 30px 0 0;
+  }
+  @media (min-width: $tabletDevice) {
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+  }
+  max-width: 100%;
+  max-height: 100%;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 34px;
+  margin: 0 30px 0 0;
 }
 
 .shopping-card__img-preview {
+  @media (min-width: $mobileDevice) {
     max-width: 120px;
     min-height: 120px;
-    margin-top: 30px;
+  }
 }
 
 .shopping-card__title {
-    color: $singleCardText;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 27px;
-    @media (min-width: $tabletDevice)  {
-        padding: 0;
-    }
-    @media (min-width: $largeDesktopDevice)  {
-        padding-top: 105px;
-    }
+  color: $singleCardText;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @media (min-width: $largeDesktopDevice) {
+    font-size: 30px;
+    line-height: 30px;
+  }
+}
+
+.shopping-card__counter {
+  @media (min-width: $desktopDevice) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  @media (min-width: $largeDesktopDevice) {
+    display: inherit;
+  }
 }
 
 .shopping-card__select {
-    font-size: 25px;
-    cursor: pointer;
-    border-radius: 10px;
-    border: 1px solid $pureBlack;
-    max-width: 150px;
+  cursor: pointer;
+  border-radius: 10px;
+  border: 1px solid $pureBlack;
+  max-width: 150px;
+  @media (min-width: $mobileDevice) {
+    font-size: 15px;
+  }
 
-    @media (min-width: $largeDesktopDevice)  {
-        min-width: 197px;
-        max-height: 60px;
-        padding-left: 35px;
-    }
+  @media (min-width: $largeDesktopDevice) {
+    font-size: 25px;
+    min-width: 197px;
+    max-height: 60px;
+    padding-left: 35px;
+  }
 }
 
 .shopping-card__option {
-    text-align: center;
-    margin-left: 20px;
+  text-align: center;
+  margin-left: 20px;
 }
 
 .shopping-card__quantity,
 .shopping-card__label,
 .shopping-card__price-title {
-    font-size: 25px;
-    font-weight: 700;
-    line-height: 34px;
-    margin: 0;
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 34px;
+  margin: 0;
 }
 
 .shopping-card__price-title {
-    display: flex;
+  display: flex;
+  justify-content: space-evenly;
+
+  @media (min-width: $desktopDevice) {
+    flex-direction: column;
     justify-content: center;
-    @media (min-width: $largeDesktopDevice)  {
-        text-align: center;
-    }
+    text-align: center;
+  }
 }
 
 .shopping-card__quantity {
-    @media (min-width: $tabletDevice)  {
-        display: none;
-    }
-    @media (min-width: $largeDesktopDevice)  {
-        display: block;
-    }
-    text-align: center;
-    margin-bottom: 69px;
+  @media (min-width: $mobileDevice) {
+    display: none;
+  }
+  @media (min-width: $tabletDevice) {
+    display: none;
+  }
+  @media (min-width: $largeDesktopDevice) {
+    display: block;
+  }
+  text-align: center;
+  margin-bottom: 69px;
+}
+
+.shopping-card__warranty {
+  font-size: 20px;
+  text-align: center;
+  line-height: 20px;
+}
+
+.shopping-card__options {
+  @media (min-width: $desktopDevice) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .shopping-card__label {
-    @media (min-width: $largeDesktopDevice)  {
-        margin: 0 0 60px 0;
-    }
+  @media (min-width: $largeDesktopDevice) {
+    margin: 0 0 60px 0;
+  }
 }
 
 .shopping-card__input {
-    max-width: 30px;
-    text-align: center;
-    border: none;
-    font-size: 25px;
-    margin: 0 17px 0 18px;
+  max-width: 30px;
+  text-align: center;
+  border: none;
+  font-size: 25px;
+  margin: 0 17px 0 18px;
 }
 
 .shopping-card__controls {
-    height: 36px;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  height: 36px;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .shopping-card__btn-plus,
 .shopping-card__btn-minus {
-    border: none;
-    background-color: $pureWhite;
-    width: 15px;
-    height: 34px;
+  border: none;
+  background-color: $pureWhite;
+  width: 15px;
+  height: 34px;
 }
 
 .shopping-card__btn-minus {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .shopping-card__btn-minus::after {
-    width: 15px;
-    height: 34px;
-    content: '';
-    position: absolute;
-    background-image: url('../Product/img/minus.svg');
-    background-repeat: no-repeat;
-    transform: translate(-3px, -3px);
-    cursor: pointer;
-    background-size: contain;
+  width: 15px;
+  height: 34px;
+  content: '';
+  position: absolute;
+  background-image: url('../Product/img/minus.svg');
+  background-repeat: no-repeat;
+  transform: translate(-3px, -3px);
+  cursor: pointer;
+  background-size: contain;
 }
 
 .shopping-card__btn-plus::after {
-    width: 15px;
-    height: 34px;
-    content: '';
-    position: absolute;
-    background-image: url('../Product/img/plus.svg');
-    background-repeat: no-repeat;
-    transform: translate(-7px, -8px);
-    cursor: pointer;
-    background-size: contain;
+  width: 15px;
+  height: 34px;
+  content: '';
+  position: absolute;
+  background-image: url('../Product/img/plus.svg');
+  background-repeat: no-repeat;
+  transform: translate(-7px, -8px);
+  cursor: pointer;
+  background-size: contain;
 }
 
 .shopping-card__colors {
-    display:  flex;
-    justify-content: center;
-    @media (min-width: $largeDesktopDevice)  {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-    }
+  @media (min-width: $mobileDevice) {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  @media (min-width: $desktopDevice) {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  @media (min-width: $largeDesktopDevice) {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
 }
 
 .shopping-card__price {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  font-weight: 800;
+  line-height: 20px;
+  color: $productCardPrice;
+  @media (min-width: $largeDesktopDevice) {
     font-size: 30px;
     font-weight: 800;
     line-height: 41px;
-    color: $productCardPrice;
-    @media (min-width: $largeDesktopDevice)  {
-        margin-top: 99px;
-    }
+    margin-top: 59px;
+  }
 }
 
 .shopping-card__remove-item {
-    display: block;
-    position: relative;
-    border: none;
-    background-color: $pureWhite;
-    cursor: pointer;
-    height: 24px;
-    padding: 0;
-    width: 100%;
-    @media (min-width: $largeDesktopDevice)  {
-        width: 24px;
-    }
+  display: block;
+  position: relative;
+  border: none;
+  background-color: $pureWhite;
+  cursor: pointer;
+  height: 24px;
+  padding: 0;
+  width: 100%;
+
+  @media (min-width: $mobileDevice) {
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: $largeDesktopDevice) {
+    width: 24px;
+  }
 }
 
 .shopping-card__remove-item:after {
-    position: absolute;
-    content: '';
-    width: 24px;
-    height: 24px;
-    background-repeat: no-repeat;
-    background-image: url('./img/crest.svg');
-    @media (min-width: $largeDesktopDevice)  {
-        top: 110px;
-        left: 85px;
-    }
+  position: absolute;
+  content: '';
+  width: 24px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-image: url('./img/crest.svg');
+
+  @media (min-width: $mobileDevice) {
+    top: 0;
+    left: 50%;
+  }
+
+  @media (min-width: $desktopDevice) {
+    top: 200%;
+    left: 60%;
+  }
+
+  @media (min-width: $largeDesktopDevice) {
+    top: 110px;
+    left: 85px;
+  }
 }
 
 .shopping-cart {
-    @media (min-width: $tabletDevice)  {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));;
-    }
-    padding: 0;
+  display: grid;
+  grid-gap: 20px;
+  @media (min-width: $tabletDevice) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
+  }
+  padding: 0;
 }
 
 .shopping-cart__title {
-    width: 100%;
-    text-align: center;
-    margin: 0;
-    line-height: 45px;
-    @media (min-width: $largeDesktopDevice)  {
-        padding-bottom: 60px;
-    }
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  line-height: 45px;
+  padding-bottom: 30px;
+  @media (min-width: $largeDesktopDevice) {
+    padding-bottom: 60px;
+  }
 }
 
 .shopping-cart__price-calculation {
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 200px;
-    font-size: 30px;
-    font-weight: 800;
-    line-height: 41px;
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+  font-weight: 800;
+  line-height: 41px;
 }
