--- a/src/Components/Navigation/navigation.scss
+++ b/src/Components/Navigation/navigation.scss
@@ -34,7 +34,7 @@
   @media (min-width: $desktopDevice) {
     margin: 0 30px 0 45px;
     padding: 25px 0 25px 0;
-    grid-template-columns: 1fr 0.5fr 1fr 2fr 0.5fr 0.5fr 1fr 1fr;
+    grid-template-columns: 1fr 0.5fr 1fr 2fr 0.5fr 0.5fr 1fr;
     grid-gap: 15px;
   }
   @media (min-width: $largeDesktopDevice) {
@@ -229,6 +229,7 @@
 }
 
 .app__link {
+  cursor: pointer;
   font-size: 20px;
   line-height: 22px;
   font-weight: 600;
