--- a/src/Components/Access/acess.scss
+++ b/src/Components/Access/acess.scss
@@ -1,10 +1,20 @@
 @import "src/App";
+
+.login {
+  margin: 0 auto;
+  padding: 20px;
+}
+
 .market-place {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding-bottom: 40px;
+  margin: 0 auto;
+  @media (min-width: $mobileDevice) {
+    max-width: $mobileDevice;
+  }
 }
 
 .market-place__bg {
@@ -12,7 +22,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   @media (min-width: $mobileDevice) {
-    min-width:  $mobileDevice;
+    min-width:  280px;
     min-height: $mobileDevice;
   }
 
@@ -60,6 +70,7 @@
   min-height: 40px;
   font-size: 30px;
   line-height: 30px;
+  max-width: 280px;
 }
 
 .sign-up__button,
@@ -82,7 +93,11 @@
   align-items: center;
 }
 
-.login__enter,
+.login__enter {
+  display: grid;
+  grid-gap: 10px;
+}
+
 .login__exit {
   display: grid;
   margin: 0 auto;
@@ -108,6 +123,10 @@
   }
 }
 
+.login__label {
+  width: 100%;
+}
+
 .login__link,
 .login__logout-btn,
 .login__logout-homepage,
@@ -123,8 +142,12 @@
   color: $pureWhite;
   background-color: $pureBlue;
   min-height: 45px;
-  min-width: 375px;
   cursor: pointer;
+  border-radius: 5px;
+  @media (min-width: $mobileDevice) {
+    min-width: 200px;
+    max-width: $mobileDevice;
+  }
 }
 
 .login__logout-homepage {
