--- a/src/Components/Access/acess.scss
+++ b/src/Components/Access/acess.scss
@@ -70,7 +70,6 @@
   min-height: 40px;
   font-size: 30px;
   line-height: 30px;
-  max-width: 280px;
 }
 
 .sign-up__button,
@@ -124,7 +123,11 @@
 }
 
 .login__label {
-  width: 100%;
+  margin: 0 auto;
+}
+
+.login__header {
+  text-align: center;
 }
 
 .login__link,
